--- a/backend/application.properties.template
+++ b/backend/application.properties.template
@@ -5,20 +5,17 @@
 server.port=8080
 
 # MySQL Database Configuration
-# Update these values according to your MySQL setup
-spring.datasource.url=jdbc:mysql://localhost:3306/schedule_planner?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+# Replace these values with your actual MySQL credentials
+spring.datasource.url=jdbc:mysql://localhost:3306/schedule_planner
 spring.datasource.username=root
-spring.datasource.password=your_mysql_password_here
+spring.datasource.password=password123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# JPA Configuration
+# JPA Configuration for MySQL
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-# Use 'create-drop' for development (recreates tables on each run)
-# Use 'update' for production (preserves data)
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.use_sql_comments=true
 
 # CORS Configuration (for React frontend)
 spring.web.cors.allowed-origins=http://localhost:3000
