--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,24 +7,20 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+## MySQL Database Configuration (AWS RDS)
+#spring.datasource.url=jdbc:mysql://mysql-training.cd4qsem4uf1x.us-west-2.rds.amazonaws.com:3306/team3capstonedb
+#spring.datasource.username=admin
+#spring.datasource.password=Be.Cognizant2025!
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 # JPA Configuration for MySQL
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# Logging Configuration
-logging.level.com.scheduleplanner.backend=DEBUG
-logging.level.org.springframework.jdbc.core=DEBUG
-
 # CORS Configuration (for React frontend)
 spring.web.cors.allowed-origins=http://localhost:3000
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
 spring.web.cors.allow-credentials=true
-
-# Connection Pool Configuration
-spring.datasource.hikari.maximum-pool-size=20
-spring.datasource.hikari.minimum-idle=5
-spring.datasource.hikari.idle-timeout=300000
-spring.datasource.hikari.connection-timeout=20000
