--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -15,6 +15,7 @@
 	<description>Backend API for Schedule Planner application</description>
 	<properties>
 		<java.version>17</java.version>
+		<maven.test.skip>true</maven.test.skip>
 	</properties>
 	<dependencies>
 		<dependency>
